# svgo

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  pyproject.toml  svgo_py_build.py
.github/workflows/: publish.yml
recipes/: two_color_centerline_icons.py  two_color_centerline_icons.svgo.json
rust/src/: centerline.rs  cli.rs  core.rs  geometry.rs  lib.rs  measure.rs  pathdata.rs  python.rs  svg.rs  trace.rs
src/svgo/: __init__.py  __main__.py  centerline.py  cli.py  geometry.py  inspect_svg.py  measure.py  path_utils.py  pathdata.py  raster_trace.py  svg_optimize.py  viewport.py  vtracer_trace.py
src/svgo_py/: __init__.py  cli.py  geometry.py  inspect_svg.py  pathdata.py  raster_trace.py  svg_optimize.py  viewport.py
tests/: test_centerline.py  test_cli.py  test_geometry.py  test_inspect_svg.py  test_measure.py  test_path_utils.py  test_pathdata.py  test_raster_trace.py  test_svg_optimize.py  test_viewport.py
