[package]
name = "svgo"
version = "0.3.0"
edition = "2021"
license = "MIT"

[lib]
name = "_svgo"
crate-type = ["cdylib", "rlib"]
path = "rust/src/lib.rs"

[[bin]]
name = "svgo"
path = "rust/src/bin/svgo.rs"

[dependencies]
base64 = "0.22"
miniz_oxide = "0.8"
percent-encoding = "2.3"
pyo3 = { version = "0.29.0", features = ["extension-module", "abi3-py311"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xmltree = "0.11"
