[build-system]
requires = []
build-backend = "svgo_py_build"
backend-path = ["."]

[project]
name = "svgo"
version = "0.1.0b1"
description = "Pure-Python SVG path editing, optimization, matrix geometry, measurement, sanitization, validation, tracing, and centerline reconstruction."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "xmodar" }]
keywords = ["svg", "path", "optimizer", "matrix", "measurement", "sanitize", "validation", "trace", "centerline", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/xmodar/svgo"
Repository = "https://github.com/xmodar/svgo"
Issues = "https://github.com/xmodar/svgo/issues"

[project.scripts]
svgo = "svgo_py.cli:main"
