[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[project]
name = "svgo"
version = "0.1.0"
description = "Pure-Python SVG path editing, optimization, matrix geometry, measurement, sanitization, viewport editing, validation, tracing, and centerline reconstruction."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "xmodar" }]
keywords = ["svg", "path", "optimizer", "matrix", "measurement", "sanitize", "viewbox", "viewport", "validation", "trace", "centerline", "cli"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/xmodar/svgo"
Repository = "https://github.com/xmodar/svgo"
Issues = "https://github.com/xmodar/svgo/issues"

[project.scripts]
svgo = "svgo.cli:main"

[tool.uv.build-backend]
module-name = "svgo"
