[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "svgo"
version = "0.2.0"
description = "Rust SVG path editing, optimization, matrix geometry, measurement, sanitization, viewport editing, validation, tracing, and centerline reconstruction with Python bindings."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "xmodar" }]
keywords = ["svg", "path", "optimizer", "matrix", "measurement", "sanitize", "viewbox", "viewport", "validation", "trace", "centerline", "cli", "rust", "pyo3"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/xmodar/svgo"
Repository = "https://github.com/xmodar/svgo"
Issues = "https://github.com/xmodar/svgo/issues"

[project.scripts]
svgo = "svgo.__main__:main"

[tool.maturin]
python-source = "src"
module-name = "svgo._svgo"
features = ["pyo3/extension-module"]
